--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <h1>I go to Gateway high school</h1>
       <click><h1>Look at this we are at MISSION BIT!!!!!!!
          Heres a link as well check it out</h1>
-         <font color="orange"><a href="https://www.google.com/search?q=cool+backgrounds&espv=2&biw=1440&bih=764&source=lnms&tbm=isch&sa=X&ved=0ahUKEwix9Njw5bXPAhUIw2MKHXviBJMQ_AUIBigB#tbm=isch&q=golden+state+warriors&imgrc=_">https://www.google.com/search?q=cool+backgrounds&espv=2&biw=1440&bih=764&source=lnms&tbm=isch&sa=X&ved=0ahUKEwix9Njw5bXPAhUIw2MKHXviBJMQ_AUIBigB#tbm=isch&q=golden+state+warriors&imgrc=_</a></font>
+         <font color="orange"><a href=http://www.gatewaypublicschools.org/page.cfm?p=350></a></font>
       <font color="yellow"><h1>I LIKE THE GOLDEN STATE WARRIRS</h1></font>
       
       
