--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html> 
 <show>
    <head>
-   <head><title> _Class_Rules_</title>
+   <head><title> FADIL WEBSITE </title>
    
    <body background="https://newevolutiondesigns.com/images/freebies/cool-wallpaper-3.jpg" size=100>
       <font color="orange"><h1>Fadil Shaikh</h1>
       <h1>I play soccer</h1>
       <h1>I go to Gateway high school</h1>
-      <click><h1>Look at this we are at MISSION BIT!!!!!!!
-         Heres a link as well check it out</h1>
+      <click><h1>Hey whatsup this is my website NOT YOURS
+         </h1>
          <font color="orange"><a href=http://www.gatewaypublicschools.org/page.cfm?p=350></a></font>
       <font color="yellow"><h1>I LIKE THE GOLDEN STATE WARRIRS</h1></font>
       
