--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <font color="orange"><h1>Fadil Shaikh</h1>
       <h1>I play soccer</h1>
       <h1>I go to Gateway high school</h1>
-      <click><h1>Hey whatsup this is my website NOT YOURS
+      <click><h1>Hey whats up this is my website NOT YOURS and remember this is a website Fadil has created
          </h1>
          <font color="orange"><a href=http://www.gatewaypublicschools.org/page.cfm?p=350></a></font>
       <font color="yellow"><h1>I LIKE THE GOLDEN STATE WARRIRS</h1></font>
