--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <h1>I go to Gateway high school</h1>
       <click><h1>Hey whats up this is my website NOT YOURS and remember this is a website Fadil has created
          </h1><font color=orange><h1>here is a link click it</h1></font>
-         <font color="orange"><a href=http://www.gatewaypublicschools.org/page.cfm?p=350</a></font>
+         <font color="orange"><a href>http://www.gatewaypublicschools.org/page.cfm?p=350</a></font>
       <font color="yellow"><h1>I LIKE THE GOLDEN STATE WARRIORS</h1></font>
       
       
