--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <head><title> FADIL WEBSITE </title>
    
    <body background="https://newevolutiondesigns.com/images/freebies/cool-wallpaper-3.jpg" size=100>
-      <font color="orange"><h1>Fadil Shaikh</h1>
+      <table border=1><font color="orange"><h1>Fadil Shaikh</h1></table>
       <h1>I play soccer</h1>
       <h1>I go to Gateway high school</h1>
       <click><h1>Hey whats up this is my website NOT YOURS and remember this is a website Fadil has created
