--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
    <head><title> FADIL WEBSITE </title>
    
-   <body background="https://newevolutiondesigns.com/images/freebies/cool-wallpaper-3.jpg"
+   <body background="https://newevolutiondesigns.com/images/freebies/cool-wallpaper-3.jpg">
      <font color=orange"><h1>Fadil Shaikh</h1>
       <h1>I play soccer</h1>
       <h1>I go to Gateway high school</h1>
