--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <h1>I go to Gateway high school</h1>
       <click><h1>Hey whats up this is my website NOT YOURS and remember this is a website Fadil has created
          </h1><font color=orange><h1>Heres a link click it</h1></font>
-         <a href>http://www.gatewaypublicschools.org/page.cfm?p=350</a>
+         <a href>"http://www.gatewaypublicschools.org/page.cfm?p=350">Gateway</a>
          <font color="yellow"><h1>I LIKE THE GOLDEN STATE WARRIORS</h1></font>
           
      <img src="http://i.cdn.turner.com/nba/nba/.element/media/2.0/teamsites/warriors/images/season-finale-2015-bg-1.jpg" width=500>
