--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
    <head><title> FADIL WEBSITE </title>
    
-   <body background="https://www.google.com/search?q=gifs&espv=2&biw=1920&bih=983&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjIzLK72J7QAhXGyVQKHZCICGMQ_AUIBigB#imgdii=SA7fzryGAF4qGM%3A%3BSA7fzryGAF4qGM%3A%3B48PgnbtPY_La4M%3A&imgrc=SA7fzryGAF4qGM%3A">
+   <body background="https://www.google.com/search?q=gifs&espv=2&biw=1920&bih=983&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjIzLK72J7QAhXGyVQKHZCICGMQ_AUIBigB#tbm=isch&q=cool+images+lion&imgrc=OOyTLIti5GjFyM%3A">
      <font color= "orange"><h1>Fadil Shaikh</h1>
       <h1>I play soccer</h1>
       <h1>I go to Gateway high school</h1>
